fixes issue7 automation spacing

--- a/styles/Automation.module.css
+++ b/styles/Automation.module.css
@@ -33,4 +33,42 @@
     transform: skew(6deg, 7.4deg);
     letter-spacing: 2rem;
   }
+
+  @media (max-width: 927px) and (orientation: landscape) {
+
+    .duskShadow {
+        font-size: 4.4rem;
+        letter-spacing: 1.1rem;
+        transform: skew(3deg, 3.4deg);
+      }
+
+      .duskShadowUppercase {
+        font-size: 3.6rem;
+      }
+
+      .duskShadowSpecial {
+        font-size: 9.3rem;
+        letter-spacing: 0.8rem;
+      }
+  
+  }
+
+  @media (max-width: 429px) and (orientation: portrait) {
+
+    .duskShadow {
+        font-size: 2.4rem;
+        letter-spacing: 0.8rem;
+        transform: skew(3deg, 3.4deg);
+      }
+
+      .duskShadowUppercase {
+        font-size: 2.6rem;
+      }
+
+      .duskShadowSpecial {
+        font-size: 5.3rem;
+        letter-spacing: 0.8rem;
+      }
+  
+  }
   
